poor man's non-livereload

--- a/spa/app/index.html
+++ b/spa/app/index.html
@@ -38,6 +38,10 @@
 <script src="bower_components/json3/lib/json3.min.js"></script>
 <![endif]-->
 
+<body>
+  <div class="row"><a href="http://andreicristianpetcu.github.io/library_app/spa/app/">Reload</a></div>
+</body>
+
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
