--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
 <![endif]-->
 
 <body>
-  <div class="row"><a href="http://andreicristianpetcu.github.io/foobar">Reload</a></div>
+  <div class="row"><a href="http://andreicristianpetcu.github.io/foobar/app">Reload</a></div>
 </body>
 
 <!-- build:js scripts/vendor.js -->
@@ -187,4 +187,4 @@
 </body>
 <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit&hl=en" async defer></script>
 </html>
-    
+\00\00\00\00
