--- a/app/index.html
+++ b/app/index.html
@@ -39,12 +39,11 @@
 <![endif]-->
 
 <body>
-  <div class="row"><a href="http://andreicristianpetcu.github.io/foobar/app">Reload</a></div>
+  <div class="row"><a href="http://andreicristianpetcu.github.io/foobar/app/">Reload</a></div>
 </body>
 
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -187,4 +186,4 @@
 </body>
 <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit&hl=en" async defer></script>
 </html>
-\00\00\00\00
+    
