--- a/app/index.html
+++ b/app/index.html
@@ -38,12 +38,19 @@
 <script src="bower_components/json3/lib/json3.min.js"></script>
 <![endif]-->
 
+<script type="application/javascript">
+  function reloadPage(){
+    window.LiveReload.performReload({ command: "reload", path: "app/index.html", liveCss: true, liveJs: true });
+  }
+</script>
+
 <body>
-  <div class="row"><a href="http://andreicristianpetcu.github.io/foobar/app/">Reload</a></div>
+  <div class="row"><a onclick="reloadPage();">Reload (touch foobar/app/index.html)</a></div>
 </body>
 
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -179,11 +186,6 @@
 <script src="scripts/licenselicense-directive.js"></script>
 <!-- endbuild -->
 
-<script type="application/javascript">
-    PDFJS.workerSrc = 'scripts/tmp/no_minify/pdf.worker.js';
-</script>
-
 </body>
 <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit&hl=en" async defer></script>
 </html>
-    
