new live reload

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,8 @@
 </script>
 
 <body>
-  <div class="row"><a onclick="reloadPage();">Reload (touch foobar/app/index.html)</a></div>
+  <div class="row"><a onclick="reloadPage();">Live Reload (touch foobar/app/index.html)</a></div>
+  <div class="row"><a href="/">Reload page (old school)</a></div>
 </body>
 
 <!-- build:js scripts/vendor.js -->
