--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 
 <body>
   <div class="row"><a onclick="reloadPage();">Live Reload (touch foobar/app/index.html)</a></div>
-  <div class="row"><a href="/">Reload page (old school)</a></div>
+  <div class="row"><a href="http://andreicristianpetcu.github.io/foobar/app/">Reload page (old school)</a></div>
 </body>
 
 <!-- build:js scripts/vendor.js -->
