add explicit grunt server

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 </script>
 
 <body>
-  <div class="row"><a onclick="reloadPage();">Live Reload (touch foobar/app/index.html)</a></div>
+  <div class="row"><a onclick="reloadPage();">Live Reload (touch foobar/app/index.html) <- only works with "grunt server"</a></div>
   <div class="row"><a href="http://andreicristianpetcu.github.io/foobar/app/">Reload page (old school)</a></div>
 </body>
 
